a1/brendan_gordon/TEST_PROGRAMS/invalidtype/mathieu_boucher/invalidtype4.min
#string in while

var s : string;

while s do

done

